added transducer / reducer examples and profiling